<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".MainActivity"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/app_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/top_round_bg"
        android:backgroundTint="@color/app_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_txt">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            shimmer:duration="800">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <include layout="@layout/shimmer_layoutholder_sample" />

                <include layout="@layout/shimmer_layoutholder_sample" />

                <include layout="@layout/shimmer_layoutholder_sample" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/banner_rec_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"></LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/main_cat_recview"
                    android:layout_width="match_parent"
                    android:layout_height=" 1300dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:nestedScrollingEnabled="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical"
                    android:background="#ADFFEB3B"></LinearLayout>

            </LinearLayout>
        </ScrollView>

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_bg"
        android:backgroundTint="#ADFFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/home_ftb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/home_ftb"
            app:backgroundTint="@color/green"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/home_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/order_ftb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:clickable="true"
            android:contentDescription="@string/order_ftb"
            app:backgroundTint="@color/yellow"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/home_ftb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cart_ftb"
            app:layout_constraintTop_toTopOf="@+id/home_ftb"
            app:srcCompat="@drawable/order_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cart_ftb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:contentDescription="@string/cart_ftb"
            app:backgroundTint="@color/yellow"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/order_ftb"
            app:layout_constraintStart_toEndOf="@+id/category_ftb"
            app:layout_constraintTop_toTopOf="@+id/order_ftb"
            app:srcCompat="@drawable/cart_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/category_ftb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:contentDescription="@string/category_ftb"
            app:backgroundTint="@color/yellow"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/home_ftb"
            app:layout_constraintStart_toEndOf="@+id/home_ftb"
            app:layout_constraintTop_toTopOf="@+id/home_ftb"
            app:srcCompat="@drawable/category_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tag_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/amarante"
        android:text="@string/app_tagLine"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/app_tittle"
        app:layout_constraintTop_toTopOf="@+id/app_tittle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/account"
        app:layout_constraintEnd_toStartOf="@+id/account"
        app:layout_constraintTop_toTopOf="@+id/account"
        app:srcCompat="@drawable/notifications_icon" />

    <ImageView
        android:id="@+id/account"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/round_bg"
        android:backgroundTint="@color/yellow_deep"
        app:layout_constraintBottom_toTopOf="@+id/tag_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_tittle"
        app:srcCompat="@drawable/person_icon" />

    <ImageView
        android:id="@+id/srch_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tag_txt"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/app_tittle"
        app:srcCompat="@drawable/search_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>