<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".ViewOrder">

  <TextView
      android:id="@+id/app_tittle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginTop="20dp"
      android:fontFamily="@font/baloo"
      android:includeFontPadding="false"
      android:text="Orders"
      android:textColor="@color/green"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout16"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/top_round_bg"
      android:backgroundTint="@color/app_bg"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/app_tittle">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/reload"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/order_RecView"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_marginStart="10dp"
          android:layout_marginTop="15dp"
          android:layout_marginEnd="10dp"
          android:paddingBottom="110dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/order_txtv" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/order_txtv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/amarante"
        android:text="View Orders"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/order_txtv"
        app:layout_constraintStart_toStartOf="@+id/order_txtv"
        app:layout_constraintTop_toBottomOf="@+id/order_txtv" />

    <TextView
        android:id="@+id/blank_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Order to Show"
        android:textColor="#C5C2C2"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/order_txtv"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout17"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="20dp"
      android:background="@drawable/round_bg"
      android:backgroundTint="#ADFFEB3B"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_ftb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/home_ftb"
        app:backgroundTint="@color/yellow"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/home_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/order_ftb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:contentDescription="@string/order_ftb"
        app:backgroundTint="@color/green"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/home_ftb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cart_ftb"
        app:layout_constraintTop_toTopOf="@+id/home_ftb"
        app:srcCompat="@drawable/order_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cart_ftb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:clickable="true"
        android:contentDescription="@string/cart_ftb"
        app:backgroundTint="@color/yellow"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/order_ftb"
        app:layout_constraintStart_toEndOf="@+id/category_ftb"
        app:layout_constraintTop_toTopOf="@+id/order_ftb"
        app:srcCompat="@drawable/cart_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/category_ftb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:clickable="true"
        android:contentDescription="@string/category_ftb"
        app:backgroundTint="@color/yellow"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/home_ftb"
        app:layout_constraintStart_toEndOf="@+id/home_ftb"
        app:layout_constraintTop_toTopOf="@+id/home_ftb"
        app:srcCompat="@drawable/category_icon" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>