<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".Category">

    <TextView
        android:id="@+id/app_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo"
        android:includeFontPadding="false"
        android:text="Category"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/top_round_bg"
        android:backgroundTint="@color/app_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_tittle">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/cat_shimmer_view_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <include layout="@layout/shimmer_layoutholder_sample" />

                <include layout="@layout/shimmer_layoutholder_sample" />

                <include layout="@layout/shimmer_layoutholder_sample" />

            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Cat_RecView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:foregroundGravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cat_txtv" />

        <TextView
            android:id="@+id/cat_txtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/amarante"
            android:text="All Categories"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/Cat_RecView"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/Cat_RecView"
            app:layout_constraintEnd_toEndOf="@+id/Cat_RecView"
            app:layout_constraintStart_toStartOf="@+id/Cat_RecView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_bg"
        android:backgroundTint="#ADFFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cat_home_ftb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/home_ftb"
            app:backgroundTint="@color/yellow"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/home_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cat_order_ftb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:clickable="true"
            android:contentDescription="@string/order_ftb"
            app:backgroundTint="@color/yellow"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/cat_home_ftb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cat_cart_ftb"
            app:layout_constraintTop_toTopOf="@+id/cat_home_ftb"
            app:srcCompat="@drawable/order_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cat_cart_ftb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:contentDescription="@string/cart_ftb"
            app:backgroundTint="@color/yellow"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/cat_order_ftb"
            app:layout_constraintStart_toEndOf="@+id/cat_category_ftb"
            app:layout_constraintTop_toTopOf="@+id/cat_order_ftb"
            app:srcCompat="@drawable/cart_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cat_category_ftb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:contentDescription="@string/category_ftb"
            app:backgroundTint="@color/green"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/cat_home_ftb"
            app:layout_constraintStart_toEndOf="@+id/cat_home_ftb"
            app:layout_constraintTop_toTopOf="@+id/cat_home_ftb"
            app:srcCompat="@drawable/category_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>